Nothing changed. Just test

--- a/css/master.css
+++ b/css/master.css
@@ -394,7 +394,7 @@ ul {
 }
 /* End Reservation */
 /* Start Services */
-/* End Services */
+
 .services{
     background-color: whitesmoke;
 }
@@ -447,3 +447,7 @@ ul {
         margin-bottom: 50%;
     
 }
+/* End Services */
+/* Start about */
+
+  
