--- a/css/hotello.css
+++ b/css/hotello.css
@@ -458,19 +458,17 @@ a {
     }
 }
 /* End Reservation */
-<<<<<<< HEAD:css/master.css
 /* Start Services */
 
 .services{
     background-color: whitesmoke;
-=======
+=========
 /* Start Articles */
 .tours {
     padding-top: 150px;
     padding-bottom: var(--main-padding-bottom);
     position: relative;
    
->>>>>>> 9bc5615f53e2d235f8ea7acf1bb490e249b9831f:css/hotello.css
 }
 @media (max-width: 991px) {
     .tours {
