--- a/css/hotello.css
+++ b/css/hotello.css
@@ -606,12 +606,18 @@ a {
     bottom: -2px;
     right: 0;
     border-style: solid;
-    border-width: 0 0 80px 500px;
+    border-width: 0px 0px 80px 500px;
     border-color: transparent transparent white transparent;
     transition: var(--main-transition);
 }
 .services .box:hover .img-holder::after {
     border-width: 80px 500px 80px 0px;
+}
+@media (max-width: 767px) {
+    .services .box .img-holder::after {
+    border-width: 80px 1500px 80px 0px;
+    }
+    
 }
 .services .box .img-holder img {
     max-width: 100%;
@@ -694,6 +700,7 @@ a {
     background-position: left bottom;
     color: white;
 }
+
 /* End Services */
 /* Start Animation */
 @keyframes land-anim {
