--- a/css/hotello.css
+++ b/css/hotello.css
@@ -59,11 +59,7 @@ a {
 }
 /* End Global Rules */
 /* Start Component */
-.main-heading {
-    font-family: 'Work Sans', sans-serif;
-    color: var(--transparent-color);  
-    font-size: 24px;
-}
+
 .main-title {
     margin: 0 auto 80px;
     font-size: 30px;
@@ -75,6 +71,7 @@ a {
     position: relative;
     z-index: 1;
     transition: var(--main-transition);
+    font-family: 'Work Sans', sans-serif; 
 }
 .main-title::before,
 .main-title::after {
@@ -705,6 +702,112 @@ a {
     color: white;
 }
 /* End Services */
+/* Start About */
+
+/* End About */
+/* Start Contact */
+.contact {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+.contact .container{
+    position: relative;
+}
+@media (max-width: 767px) {
+	.contact .container{
+    	  width: 90%;
+	}
+   
+
+}
+
+.contact p {
+    font-size: 15px;
+    color: #555;
+    line-height: 1.6;
+
+}
+.contact p span {
+    color: red;
+    font-weight: bold;
+}
+.contact form {
+    
+    margin-top: 50px;
+}
+.contact .flex-part {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.contact form input {
+    padding: 16px;
+    margin-bottom: 35px;   
+}
+.contact form input:first-child {
+    width: calc(50% - 15px);
+}
+@media (max-width: 767px) {
+	.contact form input:first-child {
+    		width: 100%;
+	}
+}
+.contact form input:nth-child(2) {
+    width: calc(50% - 15px)
+}
+@media (max-width: 767px) {
+	.contact form input:nth-child(2) {
+    		width: 100%;
+	}
+}
+.contact textarea {
+    padding: 16px;
+    width: 100%;
+    height: 180px;
+    margin-bottom: 35px;
+}
+.contact .normal-part {
+    width: 100%;
+    position: relative;
+    
+}
+.contact .normal-part span:first-child {
+    color: #444;
+    font-size: 12px;
+    margin-left: 3px;
+}
+.contact form span {
+    color: #666;
+    font-size: 14px;  
+    font-family:  Georgia, 'Times New Roman', Times, serif;
+    
+}
+.contact .ck{
+        width: 20px;
+        height: 20px;
+        margin-top: 20px;
+        margin-right: 8px;
+} 
+
+.contact a {
+    text-decoration: underline;
+    color: #333; 
+}
+.contact input[type="submit"] {
+   
+    color: white;
+    background-color: var(--main-color);
+    display: flex;
+    position: absolute;
+    right: 0;
+    padding: 10px 50px;
+    border: none;
+    cursor: pointer; 
+}
+
+
+/* End Contact */
 /* Start Animation */
 @keyframes land-anim {
     0%, 100% {
