--- a/css/hotello.css
+++ b/css/hotello.css
@@ -614,11 +614,6 @@ a {
 }
 @media (max-width: 767px) {
     .services .box .img-holder::after {
-<<<<<<< HEAD
-    border-width: 0px 0px 80px 500px;
-    }
-    
-=======
         border-width: 0 0 80px 1000px;
     }
     .services .box:hover .img-holder::after {
@@ -626,7 +621,6 @@ a {
         left: 0px;
 
     }
->>>>>>> 94615084c05c53376e702ffbf27f1949db6881f4
 }
 .services .box .img-holder img {
     max-width: 100%;
@@ -711,87 +705,75 @@ a {
 }
 
 /* End Services */
-<<<<<<< HEAD
-/* Start Footer */
-
-footer {
-    background-image: url('../imgs/footer.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 200px;
-    color: #fff;
-    padding-top: 10px;
-    position: relative;    
-
-    
-  }
- 
-  
-  .bas{
-    position: absolute;
-	font-size:15px;
-	color: var(--fgreen);
-	text-align:center;
-    font-weight: 800;
-    max-width: 200px;
-    margin: 20px 10px 200px 1100px;
-    padding: 100px auto;
-  }
- 
-  
-  .social-icons {
-    display: flex;
-    justify-content:end;
-    align-items:flex-end;
-    max-width: 150px ;
-    margin: 50px 10px 0px 1100px;
-    
-    
-  }
-  
-  .social-icons a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin: 0 5px;
-    text-align: center;
-    line-height: 40px;
-    transition: all 0.3s ease;
-  }
-  
-  .social-icons a:hover {
-    transform: translateY(5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-  }
-  
-  .fa {
-    font-size: 20px;
-    color: #333;
-  }
-  
-  
-  .footer-para{
-    position: absolute;
-    padding-left: 10px;
-    display: inline;
-    width: 30%;
-    height: auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    line-height: 2;
-
-    
-  }
-.footer-para span{
-    color:teal;
-}
-  
-/* End Footer */
-
-=======
 /* Start About */
+.about {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+.about .container {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+.about .image {
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+.about  .image {
+    position: relative;
+    overflow: hidden;
+    
+}
+.about .image::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255 255 255 / 20%);
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    z-index: 2;
+}
+.about .image:hover::before {
+    animation: flashing .7s;
+
+}
+.about  img {
+    max-width: 100%;   
+}
+.about .story {
+    height: 450px;
+    padding: 30px;
+    background-color: white;
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+.about .story h3{
+    font-weight: bold;
+    font-size: 28px;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    position: relative;
+}
+.about .story h3::before {
+    content: "";
+    width: calc(120px);
+    height: 3px;
+    background-color: var(--main-color);
+    position: absolute;
+    left: 0px;
+    bottom: -3px;
+}
+.about .story p{
+   line-height: 1.6;
+    color: #777;
+    margin-bottom: 8px;
+}
+
 
 /* End About */
 /* Start Contact */
@@ -900,7 +882,139 @@ textarea:focus {
 }
 
 /* End Contact */
->>>>>>> 94615084c05c53376e702ffbf27f1949db6881f4
+/* Start Footer */
+
+footer {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    min-height: 45vh;
+    background-color: #1f2021;
+    background-image: url('../imgs/sunrise-4616342_1280.jpg');
+    background-size: cover;
+    position: relative;    
+    text-align: center;
+  }
+  footer::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0 0 0 / 60%);
+}
+
+footer .container {
+    position: relative;
+    color: white;
+}
+.head {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+}
+.head .info p{
+   font-size: 18px;
+   text-transform: uppercase;
+   font-weight: bold;
+   letter-spacing: 4px;
+   text-align: left;
+   margin-bottom: 15px;
+   
+}
+.head .info h3 {
+    font-size: 55px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-align: left;
+}
+ .head  a{
+    color: white;
+    background-color: black;
+    position: absolute;
+    padding: 25px 40px;
+    font-weight: bold;
+    font-size: 20px;
+    right: 0;
+ }
+  
+footer .tail {
+    width: 100%;
+    background-color: black;
+    height: 50px;
+    bottom: 0;
+    position: absolute;
+    
+}
+footer .tail .containertwo{
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+footer .tail .containertwo ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+}
+
+footer .tail .containertwo ul li a{
+    background-color: transparent;
+    
+}
+footer .tail .containertwo ul li a i{
+    padding: 6px 0px 4px;
+    background-color: #4d4d4d;
+    color: #bababa;
+    margin-right: 4px;
+    text-align: center;
+    padding-left: 8px;
+    padding-right: 8px;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    zoom: 1;
+    filter: alpha(opacity=60);
+    opacity: 0.6;
+    width: 50px;
+    transition: var(--main-transition) ease-in;
+}
+footer .tail .containertwo ul li a i:hover {
+    opacity: 1;
+    color: #fff;
+}
+footer .tail .fa-youtube:hover {
+    background-color: #cd201f;
+}
+footer .tail .fa-facebook-f:hover {
+    background-color: #3b5998;
+}
+footer .tail .fa-instagram:hover {
+    background-color: #3f729b;
+}
+@media (min-width: 768px) {
+    .containertwo {
+        width: 750px;
+    }
+}
+/* Medium */
+@media (min-width: 992px) {
+    .containertwo {
+        width: 970px;
+    }
+}
+/* Large */
+
+@media (min-width: 1200px) {
+    .containertwo {
+        width: 1170px;
+    }
+}
+/* End Footer */
 /* Start Animation */
 @keyframes land-anim {
     0%, 100% {
