--- a/css/hotello.css
+++ b/css/hotello.css
@@ -721,11 +721,14 @@ a {
     padding: 15px;
     background-color: white;
     box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
-}
-.about  .image {
     position: relative;
     overflow: hidden;
-    
+    height: 450px; 
+}
+@media (max-width: 1199px) {
+    .about .image {
+        display: none;
+    }
 }
 .about .image::before {
     content: "";
@@ -744,13 +747,16 @@ a {
 
 }
 .about  img {
-    max-width: 100%;   
+    width: 100%;   
+    
 }
+
 .about .story {
     height: 450px;
     padding: 30px;
     background-color: white;
     box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+    overflow: scroll;
 }
 .about .story h3{
     font-weight: bold;
@@ -922,11 +928,21 @@ footer .container {
    margin-bottom: 15px;
    
 }
+@media (max-width: 767px) {
+	.head .info p {
+	font-size: 15px;		
+   }
+}
 .head .info h3 {
     font-size: 55px;
     font-weight: bold;
     letter-spacing: 2px;
     text-align: left;
+}
+@media (max-width: 767px) {
+    .head .info h3 {
+   	font-size: 33px
+   }
 }
  .head  a{
     color: white;
@@ -937,7 +953,11 @@ footer .container {
     font-size: 20px;
     right: 0;
  }
-  
+@media (max-width: 767px) {
+    .head  a{
+    display: none;
+ }
+}
 footer .tail {
     width: 100%;
     background-color: black;
@@ -946,6 +966,10 @@ footer .tail {
     position: absolute;
     
 }
+@media (max-width: 767px) {
+    footer .tail {
+       height: 100px
+ }
 footer .tail .containertwo{
     padding-left: 100px;
     padding-right: 100px;
@@ -955,6 +979,19 @@ footer .tail .containertwo{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+@media (max-width: 767px) {
+    footer .tail .containertwo {
+       flex-direction: column;
+	padding-right: 10px;
+	padding-left: 10px
+ }
+footer .tail .containertwo p {
+	font-size: 14px;
+	font-weight: bold;
+	padding-top: 15px;
+	padding-bottom: 15px
+}
 }
 footer .tail .containertwo ul {
     display: flex;
