--- a/css/hotello.css
+++ b/css/hotello.css
@@ -918,7 +918,7 @@ footer {
 }
 @media (max-width: 767px) {
     footer {
-        min-height: 60vh;
+        min-height: 48vh;
     }
 }
 footer .container {
@@ -929,30 +929,47 @@ footer .container {
     display: flex;
     justify-content: space-between;
     padding-top: 15px;
+    
+}
+.head .info {
+	text-align: left;
 }
 .head .info p{
    font-size: 18px;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 4px;
-   text-align: left;
+   
    margin-bottom: 15px;
    
 }
 @media (max-width: 767px) {
+	.head .info {
+       
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+}
 	.head .info p {
-	font-size: 15px;		
+	font-size: 17px;		
    }
 }
 .head .info h3 {
     font-size: 55px;
     font-weight: bold;
     letter-spacing: 2px;
-    text-align: left;
+   
 }
 @media (max-width: 767px) {
     .head .info h3 {
-   	font-size: 33px;
+   	font-size: 40px;
    }
 }
  .head  a{
