--- a/css/hotello.css
+++ b/css/hotello.css
@@ -613,15 +613,15 @@ a {
     border-width: 80px 500px 80px 0px;
 }
 @media (max-width: 767px) {
-<<<<<<< HEAD
+
     .services .box .img-holder::after 
    
     {
     
-    border-width: 0px 0px 80px 500px;
-=======
+    border-width: 0px 0px 80px 500px;}
+
     .services .box .img-holder::after {
->>>>>>> ba2829368de89c38373e7b2b480f26a60b4d85c7
+
         border-width: 0 0 80px 1000px;
     }
     .services .box:hover .img-holder::after {
@@ -629,10 +629,9 @@ a {
         left: 0px;
 
     }
-<<<<<<< HEAD
 
-=======
->>>>>>> ba2829368de89c38373e7b2b480f26a60b4d85c7
+
+
 }
 .services .box .img-holder img {
     max-width: 100%;
@@ -717,88 +716,6 @@ a {
 }
 
 /* End Services */
-<<<<<<< HEAD
-
-/* Start Footer */
-
-footer {
-    background-image: url('../imgs/footer.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 200px;
-    color: #fff;
-    padding-top: 10px;
-    position: relative;    
-
-    
-  }
- 
-  
-  .bas{
-    position: absolute;
-	font-size:15px;
-	color: var(--fgreen);
-	text-align:center;
-    font-weight: 800;
-    max-width: 200px;
-    margin: 20px 10px 200px 1100px;
-    padding: 100px auto;
-  }
- 
-  
-  .social-icons {
-    display: flex;
-    justify-content:end;
-    align-items:flex-end;
-    max-width: 150px ;
-    margin: 50px 10px 0px 1100px;
-    
-    
-  }
-  
-  .social-icons a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin: 0 5px;
-    text-align: center;
-    line-height: 40px;
-    transition: all 0.3s ease;
-  }
-  
-  .social-icons a:hover {
-    transform: translateY(5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-  }
-  
-  .fa {
-    font-size: 20px;
-    color: #333;
-  }
-  
-  
-  .footer-para{
-    position: absolute;
-    padding-left: 10px;
-    display: inline;
-    width: 30%;
-    height: auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    line-height: 2;
-
-    
-  }
-.footer-para span{
-    color:teal;
-}
-  
-/* End Footer */
-
-=======
->>>>>>> ba2829368de89c38373e7b2b480f26a60b4d85c7
 /* Start About */
 .about {
     padding-top: var(--main-padding-top);
@@ -905,6 +822,9 @@ footer {
     font-size: 15px;
     color: #555;
     line-height: 1.6;
+    padding: 10px 10px 10px 10px;
+    margin-top: 50px ;
+    margin-bottom: 10px;
 
 }
 .contact p span {
@@ -920,14 +840,16 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 .contact form input {
-    padding: 16px;
-    margin-bottom: 35px;   
+    padding: 5px;
+    margin-bottom: 10px;   
+    border-radius: 10px;
 }
 .contact form input:first-child {
     width: calc(50% - 15px);
-}
+} 
 @media (max-width: 767px) {
 	.contact form input:first-child {
     		width: 100%;
@@ -944,8 +866,9 @@ footer {
 .contact textarea {
     padding: 16px;
     width: 100%;
-    height: 180px;
+    height: 130px;
     margin-bottom: 35px;
+    border-radius: 10px;
 }
 .contact .normal-part {
     width: 100%;
@@ -984,6 +907,7 @@ footer {
     padding: 10px 50px;
     border: none;
     cursor: pointer; 
+    border-radius: 10px;
 }
 input:focus,
 textarea:focus {
@@ -991,9 +915,6 @@ textarea:focus {
 }
 
 /* End Contact */
-<<<<<<< HEAD
-
-=======
 /* Start Footer */
 
 footer {
@@ -1180,7 +1101,6 @@ footer .tail .fa-instagram:hover {
     }
 }
 /* End Footer */
->>>>>>> ba2829368de89c38373e7b2b480f26a60b4d85c7
 /* Start Animation */
 @keyframes land-anim {
     0%, 100% {
