--- a/css/hotello.css
+++ b/css/hotello.css
@@ -22,8 +22,16 @@ html {
 }
 body {
     font-family: 'Roboto', sans-serif;
-    /* font-family: 'Work Sans', sans-serif;   */
+   
 
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Work Sans', sans-serif;
 }
 ul {
     list-style: none;
@@ -365,6 +373,7 @@ a {
     z-index: 5; 
     
 }
+
 .reservation .container {
     background-color: white;
     position: absolute;
@@ -829,7 +838,7 @@ a {
 }
 .contact form {
     
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .contact .flex-part {
     width: 100%;
@@ -861,7 +870,7 @@ a {
     padding: 16px;
     width: 100%;
     height: 180px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 .contact .normal-part {
     width: 100%;
