--- a/css/hotello.css
+++ b/css/hotello.css
@@ -22,6 +22,7 @@ html {
 }
 body {
     font-family: 'Roboto', sans-serif;
+    
    
 
 }
@@ -476,12 +477,12 @@ a {
     }
 }
 /* End Reservation */
-/* Start Articles */
+/* Start Tours */
 .tours {
     padding-top: 150px;
     padding-bottom: var(--main-padding-bottom);
     position: relative;
-   
+    perspective: 600px;
 }
 @media (max-width: 991px) {
     .tours {
@@ -492,57 +493,125 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 40px;
+    
+    
 }
 .tours .box {
+    transition: transform var(--main-transition), box-shadow var(--main-transition);
+    height: 380px;
+    position: relative;  
+}
+@media (max-width: 991px) {
+    .tours .box {
+        height: 480px 
+    }
+}
+.tours .box:hover > .card{
+    transform: translateY(-10px);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+}
+.tours .box .card {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    transition: var(--main-transition);
+    transform-style: preserve-3d;
+    transition:  transform 1s;
+    transform-origin: left center; 
+}
+
+.front,
+.back {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    backface-visibility: hidden;
     box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
     background-color: white;
     border-radius: 6px;
     overflow: hidden;
-    transition: transform var(--main-transition), box-shadow var(--main-transition);
 }
-.tours .box:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+.tours .box .front {
+    background-color: white;
+   
 }
-.tours .box img {
+.tours .box .front img {
     width: 100%;
     height: 180px;
     max-width: 100%;
   }
 
 @media (max-width: 991px) {
-    .tours .box img {
+    .tours .box .front img {
         height: 300px;
     }
 }
-  .tours .box .content {
+.tours .box .front .content {
     padding: 20px;
-  }
-  .tours .box .content h3 {
+}
+.tours .box .front .content h3 {
     margin: 0;
-  }
-  .tours .box .content p {
+}
+.tours .box .front .content p {
     margin: 10px 0 0;
     line-height: 1.5;
     color: #777;
-  }
-  .tours .box .info {
+}
+.tours .box  .info {
     padding: 20px;
     border-top: 1px solid #e6e6e7;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  .tours .box .info a {
+
+}
+
+.tours .box .info a {
     color: var(--main-color);
     font-weight: bold;
-  }
-  .tours .box .info i {
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+}
+.tours .box .info i {
     color: var(--main-color);
-  }
+}
   .tours .box:hover .info i {
     animation: moving-arrow 0.6s linear infinite;
-  }
+}
+.tours .box .card .back {
+    
+    transform: rotateY(180deg);
+    background-color: white;
+}
+
+.tours .box .card .back .content {
+    padding: 20px 20px 8px 20px;
+    overflow: auto;
+    height: 300px;
+}
+@media (max-width: 991px) {
+    .tours .box .card .back .content {
+        height: 419px;
+    }
+}
+.tours .box .card .back .info {
+    padding: 20px;
+    height: 53px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    
+}
+
+.tours .box .back h3 {
+    margin-bottom: 20px;
+}
+.tours .box .back p {
+    color: #777;
+    line-height: 1.5;
+}
+
 /* End Articles */
 /* Start Galery */
 .gallery {
