--- a/css/reservation.css
+++ b/css/reservation.css
@@ -45,12 +45,18 @@ h2 {
     padding-bottom: 8px;
     border-bottom: 1px solid silver;
 }
+.hidden-input {
+    display: none;
+}
 .content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 0;
     
+}
+.special-input {
+
 }
 .input-box {
     display: flex;
@@ -70,7 +76,7 @@ h2 {
 .gender-title {
     font-size: 16px;
 }
-.input-box input {
+.input-box input, select {
     height: 40px;
     width: 95%;
     padding: 0 10px;
@@ -80,7 +86,11 @@ h2 {
 }
 .input-box input:is(:focus, :valid) {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-}.gender-category {
+}
+.input-box select:is(:focus, :valid) {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+}
+.gender-category {
     color: grey;
 }
 .gender-category label {
