--- a/css/hotello.css
+++ b/css/hotello.css
@@ -598,6 +598,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 
 }
 @media (max-width: 767px) {
